--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Bash (Windows)
+      - name: Setup Bash and GCC (Windows)
         if: runner.os == 'Windows'
         uses: msys2/setup-msys2@v2
         with:
-          install: bash
+          update: true
+          install: >-
+            base-devel
+            mingw-w64-x86_64-toolchain
+
+      - name: Set Path for MinGW (Windows)
+        if: runner.os == 'Windows'
+        run: echo "C:\msys64\mingw64\bin" >> $GITHUB_PATH
 
       - name: Run CI Entrypoint
         shell: bash
