--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install Python Dependencies
+        run: pip install pandas matplotlib
+
       - name: Setup Bash and GCC (Windows)
         if: runner.os == 'Windows'
         uses: msys2/setup-msys2@v2
@@ -34,3 +42,10 @@ jobs:
         run: |
           chmod +x ci/ci_entrypoint.sh
           bash ci/ci_entrypoint.sh
+
+      - name: Upload Benchmark Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: benchmark-results-${{ matrix.os }}
+          path: results/
+
