Phase 5-A: Granularity experiments, metrics schema extension, and CI workflow update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,9 @@ jobs:
         shell: bash
         run: |
           chmod +x ci/ci_entrypoint.sh
+          # Phase 5-A: Explicitly run granularity benchmarks
           bash ci/ci_entrypoint.sh
+          bash benchmarks/run_benchmarks.sh
 
       - name: Upload Benchmark Results
         uses: actions/upload-artifact@v4
