--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,9 +41,10 @@ jobs:
         shell: bash
         run: |
           chmod +x ci/ci_entrypoint.sh
-          # Phase 5-A: Explicitly run granularity benchmarks
           bash ci/ci_entrypoint.sh
           bash benchmarks/run_benchmarks.sh
+          # Phase 5-B: Run predictive analysis (already included in run_benchmarks.sh but keeping explicit for clarity)
+          python3 analysis/predictive_analysis.py
 
       - name: Upload Benchmark Results
         uses: actions/upload-artifact@v4
